# GraphRAG

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
data/: animal_data.json
src/: app.py  file_paths.json  ingest_data.py
src/graph/: graph_builder.py  graph_rag.py
